test/k8s/manifests/memory-repro.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yahoo-repro
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: victim
  name: victim
  namespace: yahoo-repro
spec:
  replicas: 20
  selector:
    matchLabels:
      app: victim
  template:
    metadata:
      labels:
        app: victim
    spec:
      containers:
      - image: nginx:alpine
        name: nginx
        ports:
        - containerPort: 80
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: yahoo-heavy-policy
  namespace: yahoo-repro
spec:
  endpointSelector:
    matchLabels:
      app: victim
  ingress:
  - fromCIDR:
    - 10.100.0.0/32
  - fromCIDR:
    - 10.100.0.1/32
  - fromCIDR:
    - 10.100.0.2/32
  - fromCIDR:
    - 10.100.0.3/32
  - fromCIDR:
    - 10.100.0.4/32
  - fromCIDR:
    - 10.100.0.5/32
  - fromCIDR:
    - 10.100.0.6/32
  - fromCIDR:
    - 10.100.0.7/32
  - fromCIDR:
    - 10.100.0.8/32
  - fromCIDR:
    - 10.100.0.9/32
  - fromCIDR:
    - 10.100.0.10/32
  - fromCIDR:
    - 10.100.0.11/32
  - fromCIDR:
    - 10.100.0.12/32
  - fromCIDR:
    - 10.100.0.13/32
  - fromCIDR:
    - 10.100.0.14/32
  - fromCIDR:
    - 10.100.0.15/32
  - fromCIDR:
    - 10.100.0.16/32
  - fromCIDR:
    - 10.100.0.17/32
  - fromCIDR:
    - 10.100.0.18/32
  - fromCIDR:
    - 10.100.0.19/32
  - fromCIDR:
    - 10.100.0.20/32
  - fromCIDR:
    - 10.100.0.21/32
  - fromCIDR:
    - 10.100.0.22/32
  - fromCIDR:
    - 10.100.0.23/32
  - fromCIDR:
    - 10.100.0.24/32
  - fromCIDR:
    - 10.100.0.25/32
  - fromCIDR:
    - 10.100.0.26/32
  - fromCIDR:
    - 10.100.0.27/32
  - fromCIDR:
    - 10.100.0.28/32
  - fromCIDR:
    - 10.100.0.29/32
  - fromCIDR:
    - 10.100.0.30/32
  - fromCIDR:
    - 10.100.0.31/32
  - fromCIDR:
    - 10.100.0.32/32
  - fromCIDR:
    - 10.100.0.33/32
  - fromCIDR:
    - 10.100.0.34/32
  - fromCIDR:
    - 10.100.0.35/32
  - fromCIDR:
    - 10.100.0.36/32
  - fromCIDR:
    - 10.100.0.37/32
  - fromCIDR:
    - 10.100.0.38/32
  - fromCIDR:
    - 10.100.0.39/32
  - fromCIDR:
    - 10.100.0.40/32
  - fromCIDR:
    - 10.100.0.41/32
  - fromCIDR:
    - 10.100.0.42/32
  - fromCIDR:
    - 10.100.0.43/32
  - fromCIDR:
    - 10.100.0.44/32
  - fromCIDR:
    - 10.100.0.45/32
  - fromCIDR:
    - 10.100.0.46/32
  - fromCIDR:
    - 10.100.0.47/32
  - fromCIDR:
    - 10.100.0.48/32
  - fromCIDR:
    - 10.100.0.49/32
